Ajout de la fonctionnalité météo avec intégration de l'API Open-Meteo pour afficher les prévisions sur l'application Doodle.